--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <style>
-
-  </style>
-
 
   <div class="panels">
     <div class="panel panel1">
@@ -40,11 +36,7 @@
     </div>
   </div>
 
-  <script>
-
-  </script>
-
-
+  <script src="myScripts.js"></script>
 
 </body>
 </html>
